small updates of bugs and update swagger.json
